--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -28,11 +28,12 @@
 }
 
 .button {
-    -fx-background-color: #1976d2;
+    -fx-background-color: #40739e;
     -fx-text-fill: white;
     -fx-font-weight: bold;
-    -fx-padding: 8px 16px;
-    -fx-background-radius: 5px;
+    -fx-padding: 8 15;
+    -fx-background-radius: 15;
+    -fx-cursor: hand;
 }
 
 .button:hover {
@@ -59,7 +60,7 @@
 }
 
 .label {
-    -fx-font-size: 14px;
+    -fx-font-size: 10px;
     -fx-text-fill: #333333;
 }
 
